<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ChooseBedTemp</class>
 <widget class="QWidget" name="ChooseBedTemp">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1280</width>
    <height>720</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QQuickWidget" name="qw_Temp40">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>270</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp60">
   <property name="geometry">
    <rect>
     <x>417</x>
     <y>270</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1280</width>
     <height>720</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Adobe Arabic</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgba(32, 32, 35, 255);</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp80">
   <property name="geometry">
    <rect>
     <x>654</x>
     <y>270</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp100">
   <property name="geometry">
    <rect>
     <x>891</x>
     <y>270</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <zorder>label</zorder>
  <zorder>qw_Temp80</zorder>
  <zorder>qw_Temp40</zorder>
  <zorder>qw_Temp60</zorder>
  <zorder>qw_Temp100</zorder>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QQuickWidget</class>
   <extends>QWidget</extends>
   <header location="global">QtQuickWidgets/QQuickWidget</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
